--- a/.github/ISSUE_TEMPLATE/other.yml
+++ b/.github/ISSUE_TEMPLATE/other.yml
@@ -4,10 +4,13 @@ body:
   - type: checkboxes
     id: acknowledgement
     attributes:
+      label: "✅ Viability Checklist"
       options:
       - label: I acknowledge that issues using this template may be closed without further explanation at the maintainer's discretion. 
         required: true
   - type: textarea
     id: contents
+    attributes:
+      label: What's up?
     validations:
       required: true
