--- a/.github/ISSUE_TEMPLATE/other.yml
+++ b/.github/ISSUE_TEMPLATE/other.yml
@@ -4,6 +4,7 @@ body:
   - type: checkboxes
     id: acknowledgement
     attributes:
+      label: Acknowledgement
       options:
       - label: I acknowledge that issues using this template may be closed without further explanation at the maintainer's discretion. 
         required: true
